[TL] Adds Facebook link

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: "http://www.ecmc.org.uk" # the base hostname & protocol for your site
 twitter_username: EalingChmbrMus
 github_username: ealingchambermusic
 google_analytics: UA-73611540-1
-facebook: EalingChamberMusic
+facebook_username: EalingChamberMusic
 
 # Build settings
 markdown: kramdown
