[TL] Initial site cleanup

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site wide configuration
 
-title: Site Title
-locale: en_US
-description: Describe your website here.
+title: Ealing Chamber Music Club
+locale: en_GB
+description: A friendly amateur chamber music club in Ealing, West London.
 logo: site-logo.png
 search: true
-url: http://localhost:4000
+url: http://www.ecmc.org.uk
 
 # Jekyll configuration
 
@@ -36,13 +36,13 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 
 # Site owner
 owner:
-  name: Your Name
+  name: Ealing Chamber Music Club
   avatar: bio-photo.jpg
-  email: you@email.com
+  email: ealingchambermusic@gmail.com
   disqus-shortname:
-  twitter: #username
-  facebook: #username
-  github: #username
+  twitter: EalingChmbrMus
+  facebook: EalingChamberMusic
+  github: ealingchambermusic
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
@@ -52,7 +52,7 @@ owner:
   weibo: #userid
   google:
     plus: #username
-    analytics:
+    analytics: UA-73611540-1
     verify:
     ad-client:
     ad-slot:
