--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,8 @@ facebook_username: EalingChamberMusic
 
 # Build settings
 markdown: kramdown
+paginate: 10
+paginate_path: "/posts/page:num/"
+
+
+gems: [jekyll-paginate]
